# trellis

./: .gitignore  API.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md
docs/: SESSION-2026-07-21.md  SESSION-2026-07-22.md
src/: api.rs  app.rs  canvas.rs  images.rs  main.rs  model.rs  tree.rs
