[package]
name = "trellis"
version = "0.1.0"
edition = "2021"
description = "A hierarchical, spatial note-taking app: a tree of free-form canvases"
license = "MIT"
readme = "README.md"

[[bin]]
name = "trellis"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "persistence"] }
egui = { version = "0.29", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
ron = "0.8"
directories = "5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
