[package]
name = "trellis"
version = "0.1.0"
edition = "2021"
description = "A hierarchical, spatial note-taking app: a tree of free-form canvases"
license = "MIT"
readme = "README.md"

[[bin]]
name = "trellis"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "persistence"] }
egui = { version = "0.29", features = ["serde"] }
egui_extras = { version = "0.29", default-features = false, features = ["image"] }
egui_commonmark = { version = "0.18", features = ["better_syntax_highlighting"] }
serde = { version = "1", features = ["derive"] }
ron = "0.8"
directories = "5"
rfd = "0.15"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "webp"] }
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
html2md = "0.2"
base64 = "0.22"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
